# rustbox

./: .gitignore  AgentReadme.md  Cargo.toml  Dockerfile  PRODUCTION_READINESS.md  README.md  RUN_TESTS_REFACTOR.md  SECCOMP_STATUS.md  compare.md  deploy.sh  docker-compose.yml  forge.yaml  init.sql  init_db.py  quick_test.sh  requirements.txt  run_tests.sh  setup_languages.sh  test_all_languages.sh  test_basic.sh  test_comprehensive.sh  test_e2e.sh  test_language_config.sh  test_languages_fixed.sh  test_seccomp_quick.sh  test_seccomp_security.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: config.py  main.py  worker.py
app/models/: database.py  schemas.py
app/routes/: languages.py  submissions.py  system.py
app/services/: database.py  queue_service.py  rustbox_service.py
debian/: postinst  postrm
docs/: README.md  cgroup.md  cli.md  examples.md  ioi-compatibility.md  package.json  resource-control-usage.md  seccomp-fixes.md
docs/docs/: README.md  cgroup.md  cli.md  examples.md  ioi-compatibility.md  resource-control-usage.md  testing.md  types.md
docs/docs/source/: README.md  cgroup-source.md  cli-source.md  executor.md  isolate.md  lib.md  main.md  types-source.md
examples/: README.md  demo_filesystem_security.sh  demo_namespace_isolation.sh  io_demo.py
plans/: 2025-07-01-production-readiness-assessment-v1.md
rustbox/: Cargo.toml  run_tests.sh  rustbox  setup_languages.sh  state.md
rustbox/.claude/: settings.local.json
rustbox/src/: cgroup.rs  config.rs  executor.rs  filesystem.rs  isolate.rs  lib.rs  lock_manager.rs  lock_manager_tests.rs  main.rs  namespace.rs  security.rs  security_logging.rs  types.rs
rustbox/src/test_programs/: file_io.c  fork.c  hello.c  memory  network.c  network.py  run_tests.sh  timeout
rustbox/src/tests/: README.md  all_tests.rs  common.rs  core.rs  mod.rs  performance.rs  resource.rs  security.rs  stress.rs  utils.rs
rustbox/test_programs/: fork  hello.py  simple.py  syscalls
rustbox/tests/core/: quick_core_test.sh
rustbox/tests/integration/: basic_workflow.sh
src/: cgroup.rs  cleanup.rs  cli.rs  enhanced_lock_manager.rs  executor.rs  filesystem.rs  io_handler.rs  ipc.rs  isolate.rs  lib.rs  lock_manager.rs  main.rs  multiprocess.rs  namespace.rs  resource_limits.rs  seccomp.rs  seccomp_native.rs  types.rs
systemd/: rustbox.service  rustbox.slice
test_programs/: compile_all.sh  file_io  file_io.py  fork.py  hello  memory.c  memory.py  network  syscalls.c  syscalls.py  timeout.c  timeout.py
test_programs/.claude/: settings.local.json
tests/: README.md  aggressive_resource_test.sh  filesystem_security_tests.rs  lib.rs  namespace_isolation_tests.rs  resource_limits.rs
tests/basic/: cgroup.rs  mod.rs
tests/cleanup/: cleanup_integration.sh  cleanup_stress.sh  multiprocess_cleanup.sh
tests/concurrent/: mod.rs
tests/core/: quick_core_test.sh
tests/file_locking/: mod.rs
tests/filesize/: large_file_creator.py  mod.rs
tests/filesystem/: mod.rs
tests/integration/: end_to_end.sh
tests/invalid/: mod.rs
tests/io/: advanced_io_tests.rs  math.py  mod.rs
tests/language/: mod.rs  test.py
tests/memory/: memory_test.py  mod.rs
tests/namespace/: mod.rs
tests/performance/: benchmark.sh
tests/process/: fork_bomb.py  mod.rs
tests/resource/: fd_limit_test.sh  resource_test.sh
tests/resource_limits/: cpu_test.py  memory_test.py  mod.rs  test_runner.py  time_test.py
tests/seccomp/: malicious_code.py  malicious_tests.rs  mod.rs
tests/security/: comprehensive_security.sh  isolation_test.sh  multiuser_safety_test.sh  seccomp_security.sh  seccomp_validation.sh  user_group_management.sh
tests/stress/: parallel.sh  sequential.sh  stress_program.py
tests/strict_mode/: mod.rs
tests/timeout/: cpu_intensive.py  mod.rs
tests/unit/: cleanup_tests.rs  mod.rs
tests/utilities/: test_cpu.rs
(+36 files in other folders)
