[package]
name = "mini-isolate"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A process isolation and resource control system inspired by IOI Isolate"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.10"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal", "fs", "user"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "synchapi"] }
[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.8"
serial_test = "3.0"
assert_cmd = "2.0"
predicates = "3.0"